# EconomySim

./: Cargo.toml  README.md  config.toml
data/: goods.xml  households.xml  needs.xml  production.xml  stocks.xml
src/: app.rs  config.rs  lib.rs  main.rs  util.rs
src/data/: compiled.rs  ids.rs  mod.rs  xml.rs
src/simulation/: economy.rs  engine.rs  household.rs  market.rs  mod.rs  stock_market.rs
src/ui/: layout.rs  mod.rs  render.rs
