# Cargo.toml
[package]
name = "EconomySim"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
quick-xml = { version = "0.36", features = ["serialize"] }
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1.0"
thiserror = "1.0"
smallvec = "1.13"
config = "0.15.19"
