[package]
name = "economysim"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "EconomySim"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
quick-xml = { version = "0.31", features = ["serde"] }
rand = "0.8"
rand_chacha = "0.3"
ratatui = "0.26"
crossterm = "0.27"
smallvec = "1.11"
